rename appname in bower

--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "angular-acl",
+  "name": "angular-acl-tahiaji",
   "version": "0.0.5",
   "homepage": "https://github.com/Tahiaji/angular-acl",
   "authors": [
